--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[[bin]]
+name = "finite_fields"
+path = "src/finite_fields/main.rs"
+
+[[bin]]
+name = "elliptic_curves"
+path = "src/elliptic_curves/main.rs"
